fix: Resolve remaining compilation errors for Java 11 compatibility
- Add missing FisherfacesExtractor(int numComponents) constructor
  Used by BenchmarkRunner at lines 346 and 735

- Fix Java 16+ .toList() usage for Java 11 compatibility:
  - FeatureExtractor.java: extractBatch() method
  - RecognitionResult.java: getTopAlternatives() method
  - Changed to .collect(Collectors.toList())

These fixes ensure the codebase compiles correctly with Java 11, 17, and 21.

https://claude.ai/code/session_01RjEmZunyrTM3xSyckAbYgf